--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_lip_masked_exchange_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_lip_masked_exchange_motion_prior.yaml
@@ -56,9 +56,10 @@ losses:
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
-      # reconstruction_type: EMOCA_v2_lr_mse_20_with_bfmtex
-    reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
-    # reconstruction_type: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    target_method_image: EMICA_mead_mp_lr_mse_15
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
   
   emotion_video_loss_disentangled:
@@ -112,9 +113,10 @@ losses:
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
-    # reconstruction_type: EMOCA_v2_lr_mse_20_with_bfmtex
-    reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
-    # reconstruction_type: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    target_method_image: EMICA_mead_mp_lr_mse_15
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
     apply_on_disentangled: True
 
@@ -135,9 +137,10 @@ losses:
     trainable: false 
     normalize_features: false 
     # target_method_image: spectre # trying to make lips behave as spectre
-    # reconstruction_type: EMOCA_v2_lr_mse_20_with_bfmtex
-    reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
-    # reconstruction_type: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    target_method_image: EMICA_mead_mp_lr_mse_15
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   lip_reading_loss_disentangled:
@@ -157,9 +160,10 @@ losses:
     trainable: false 
     normalize_features: false 
     # target_method_image: spectre # trying to make lips behave as spectre
-    # reconstruction_type: EMOCA_v2_lr_mse_20_with_bfmtex
-    reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
-    # reconstruction_type: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex
+    # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex
+    target_method_image: EMICA_mead_mp_lr_mse_15
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
     apply_on_disentangled: True
 
