--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
@@ -49,11 +49,11 @@ ring_size: none
 drop_last: true
 training_sampler: uniform
 
-# landmark_types: [mediapipe, fan]
-# landmark_sources: [original, aligned]
+landmark_types: [mediapipe, fan]
+landmark_sources: [original, aligned]
 
-landmark_types: mediapipe
-landmark_sources: original
+# landmark_types: mediapipe
+# landmark_sources: original
 
 segmentation_source: aligned
 
