--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
@@ -19,13 +19,15 @@ losses:
     # weight: 0.000000001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     # emo_feat_loss: mse_loss
-    emo_feat_loss: masked_mse_loss
+    # emo_feat_loss: masked_mse_loss
+    emo_feat_loss: cosine_similarity
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
     # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex 
-    target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
     # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex 
+    target_method_image: EMICA_mead_mp_lr_mse_15
 
 
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
@@ -44,13 +46,15 @@ losses:
     # weight: 0.000000001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     # emo_feat_loss: mse_loss
-    emo_feat_loss: masked_mse_loss
+    # emo_feat_loss: masked_mse_loss
+    emo_feat_loss: cosine_similarity
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
     # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex 
-    target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
     # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex 
+    target_method_image: EMICA_mead_mp_lr_mse_15
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
     apply_on_disentangled: True
 
@@ -98,10 +102,11 @@ losses:
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
     apply_on_disentangled: True
 
-  expression_reg: 
-    weight: 0.0001
 
 metrics: 
+
+  expression_reg: 
+    weight: 1.0
 
   exp_loss: 
     weight: 1.
