--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange_motion_prior.yaml
@@ -110,10 +110,11 @@ losses:
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
     apply_on_disentangled: True
 
-  expression_reg: 
-    weight: 0.0001
 
 metrics: 
+
+  expression_reg: 
+    weight: 1.
 
   motion_prior_gaussian_reg: 
     weight: 1.
