--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
@@ -76,8 +76,9 @@ losses:
     normalize_features: false 
     # target_method_image: spectre # trying to make lips behave as spectre
     # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex 
-    target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
     # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex 
+    target_method_image: EMICA_mead_mp_lr_mse_15
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   lip_reading_loss_disentangled:
@@ -97,8 +98,9 @@ losses:
     metric: cosine_similarity
     # target_method_image: spectre # trying to make lips behave as spectre
     # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex 
-    target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
+    # target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
     # target_method_image: EMOCA_v2_lr_cos_1.5_with_bfmtex 
+    target_method_image: EMICA_mead_mp_lr_mse_15
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
     apply_on_disentangled: True
 
