Update: traning swin-based video emotion net from cached features

--- a/gdl_apps/VideoEmotionRecognition/videoemorec_conf/av_emorec_transformer_low_rank_tensor.yaml
+++ b/gdl_apps/VideoEmotionRecognition/videoemorec_conf/av_emorec_transformer_low_rank_tensor.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - data/datasets: vocaset
+  - data/datasets: mead_pseudo_gt
   - data/augmentations: none
   # - model/paths : cluster
   - model/settings : av_emorec_tensor_low_rank_fusion
