--- a/gdl_apps/VideoEmotionRecognition/videoemorec_conf/swinemorec_transformer.yaml
+++ b/gdl_apps/VideoEmotionRecognition/videoemorec_conf/swinemorec_transformer.yaml
@@ -1,8 +1,8 @@
 defaults:
-  - data/datasets: vocaset
+  - data/datasets: mead_pseudo_gt_swin_emo
   - data/augmentations: none
   # - model/paths : cluster
-  - model/settings : videoemorec
+  - model/settings : videoemorec_swin-b
   - model/output@model/output : basic_expressions
   # - model/sizes@model/sizes : default
   # - model/neural_rendering : none
@@ -15,7 +15,8 @@ defaults:
   # - model/face@model/face: full_space
   - model/sequence_encoder@model/sequence_encoder: transformer_classifier
   - model/classification_head@model/classification_head: linear
-  - model/feature_extractor@model/feature_extractor: swin_emorec
+  # - model/feature_extractor@model/feature_extractor: swin_emorec # preprocessed and loaded through the data loader instead
+  - model/feature_extractor@model/feature_extractor: none
   ## - model/output@model/output: exp_jaw
   # # - model/output@model/output: vertices
   - learning/losses: cross_entropy
