--- a/requirements38.txt
+++ b/requirements38.txt
@@ -12,7 +12,7 @@ docker-pycreds~=0.4.0
 docutils~=0.16
 dominate~=2.6.0
 easydict~=1.9
-face-alignment~=1.3.3
+face-alignment~=1.3.4
 facenet-pytorch~=2.5.1
 flatbuffers~=1.12
 freetype-py~=2.2.0
@@ -74,4 +74,5 @@ plotly==5.8.0
 librosa==0.9.2
 h5py==3.7.0
 hickle==5.0.2
+phonemizer==3.2.1
 # pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
