--- a/gdl_apps/FaceReconstruction/facerec_conf/model/renderer/deca_renderer.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/renderer/deca_renderer.yaml
@@ -7,3 +7,5 @@ uv_size: 256
 image_size: 224
 topology_path: /ps/scratch/rdanecek/data/FLAME/geometry/head_template.obj
 n_light: 27
+
+output_image_keyword: image
