Update configs to work with 3D fan landmarks where relevant

--- a/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/celebvhq.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/celebvhq.yaml
@@ -47,7 +47,8 @@ drop_last: true
 training_sampler: uniform
 
 
-landmark_types: [mediapipe, fan]
+landmark_types: [mediapipe, fan3d]
+# landmark_types: [mediapipe, fan]
 landmark_sources: [original, aligned]
 
 segmentation_source: aligned
