--- a/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/celebvhq_no_occlusion.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/celebvhq_no_occlusion.yaml
@@ -46,7 +46,8 @@ occlusion_settings_test:
 drop_last: true
 training_sampler: uniform
 
-landmark_types: [mediapipe, fan]
+# landmark_types: [mediapipe, fan]
+landmark_types: [mediapipe, fan3d]
 landmark_sources: [original, aligned]
 segmentation_source: aligned
 
