Update loss configs

--- a/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/deca_coarse_pretrain.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/deca_coarse_pretrain.yaml
@@ -27,5 +27,29 @@ losses:
     # target_key: landmarks,fan
     target_key: landmarks,fan3d
 
+
+  # we don't do photometric losses yet, but we want the predictions to be regularized and not go crazy
+  expression_reg: 
+    type: expression_reg
+    weight: 1e-4
+    metric: False
+    predicted_key: expcode
+    target_key: False
+
+  tex_reg: 
+    type: tex_reg
+    weight: 1e-7
+    metric: False
+    predicted_key: texcode
+    target_key: False
+
+  light_reg: 
+    type: light_reg
+    weight: 12.
+    metric: False
+    predicted_key: lightcode
+    target_key: False
+
+
 metrics: 
   {}
