--- a/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/deca_mica_coarse.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/deca_mica_coarse.yaml
@@ -3,7 +3,7 @@ losses:
 
   landmark_loss_fan_contour:
     type: landmark_loss_fan_contour
-    weight: 1.
+    weight: 0.5
     metric: l1
     mask_invalid: mediapipe_landmarks
     # predicted_key: predicted_landmarks
@@ -13,7 +13,7 @@ losses:
 
   landmark_loss_mediapipe: 
     type: landmark_loss_mediapipe
-    weight: 1.
+    weight: 0.5
     metric: l1
     mask_invalid: mediapipe_landmarks
     predicted_key: predicted_landmarks_mediapipe
@@ -21,7 +21,7 @@ losses:
 
   lip_distance_mediapipe: 
     type: lip_distance_mediapipe
-    weight: 1.
+    weight: 0.5
     metric: l1
     mask_invalid: mediapipe_landmarks
     predicted_key: predicted_landmarks_mediapipe
@@ -29,7 +29,7 @@ losses:
   
   mouth_corner_distance_mediapipe:
     type: mouth_corner_distance_mediapipe
-    weight: 1.
+    weight: 0.5
     metric: l1
     mask_invalid: mediapipe_landmarks
     predicted_key: predicted_landmarks_mediapipe
@@ -37,7 +37,7 @@ losses:
 
   eye_distance_mediapipe: 
     type: eye_distance_mediapipe
-    weight: 1.
+    weight: 0.5
     metric: l1
     mask_invalid: mediapipe_landmarks
     predicted_key: predicted_landmarks_mediapipe
@@ -45,7 +45,7 @@ losses:
 
   photometric_loss: 
     type: photometric_loss
-    weight: 1.
+    weight: 2.
     metric: l1
     predicted_key: predicted_image
     target_key: image_original
@@ -54,21 +54,21 @@ losses:
 
   expression_reg: 
     type: expression_reg
-    weight: 1.
+    weight: 1e-4
     metric: False
     predicted_key: expcode
     target_key: False
 
   tex_reg: 
     type: tex_reg
-    weight: 1.
+    weight: 1e-7
     metric: False
     predicted_key: texcode
     target_key: False
 
   light_reg: 
     type: light_reg
-    weight: 1.
+    weight: 12.
     metric: False
     predicted_key: lightcode
     target_key: False
