--- a/requirements38.txt
+++ b/requirements38.txt
@@ -75,4 +75,5 @@ librosa==0.9.2
 h5py==3.7.0
 hickle==5.0.2
 phonemizer==3.2.1
+decord==0.6.0
 # pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
