Disable audio reading for vdieo datasets in FaceReconstruction

--- a/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/mead.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/mead.yaml
@@ -18,7 +18,7 @@ face_detector_threshold: 0.05
 # landmarks_from: sr_res
 
 include_processed_audio: False
-include_raw_audio: True
+include_raw_audio: False
 preload_videos: False
 # preload_videos: True
 inflate_by_video_size: False
