Update configs and training script

--- a/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/lrs3_no_occlusion.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/lrs3_no_occlusion.yaml
@@ -52,3 +52,4 @@ landmark_types: [mediapipe, fan3d]
 landmark_sources: [original, aligned]
 
 segmentation_source: aligned
+return_mica_images: "fan"
