--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/deca_mica_encoder.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/deca_mica_encoder.yaml
@@ -31,7 +31,8 @@ encoders:
     type: MicaEncoder
     backbone: ResNet50 
     mica_model_path: 'MICA/model/mica.tar'
-    mica_preprocessing: ported_insightface
+    # mica_preprocessing: ported_insightface
+    mica_preprocessing: fan
 
     input_size: 224
 
