--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_pretrain.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_pretrain.yaml
@@ -47,8 +47,9 @@ encoders:
         type: MicaEncoder
         backbone: ResNet50 
         mica_model_path: 'MICA/model/mica.tar'
-        mica_preprocessing: ported_insightface
-
+        # mica_preprocessing: ported_insightface
+        mica_preprocessing: fan
+        
         input_size: 224
 
         predicts: 
