--- a/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/deca_mica_coarse.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/deca_mica_coarse.yaml
@@ -62,6 +62,10 @@ losses:
   tex_reg: 
     type: tex_reg
     weight: 1e-4
+    # weight: 1e-5
+    # weight: 1e-6
+    # weight: 1e-7
+    # weight: 1e-8
     metric: False
     predicted_key: texcode
     target_key: False
