Prepare for training with CelebVText

--- a/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/celebvtext.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/data/datasets/celebvtext.yaml
@@ -27,19 +27,19 @@ occlusion_settings_train:
     occlusion_probability_right_eye: 0.125
     occlusion_probability_face: 0.125
 
-occlusion_settings_val:
-    occlusion_length: [1, 15]
-    occlusion_probability_mouth: 0.125
-    occlusion_probability_left_eye: 0.125
-    occlusion_probability_right_eye: 0.125
-    occlusion_probability_face: 0.125
+# occlusion_settings_val:
+#     occlusion_length: [1, 15]
+#     occlusion_probability_mouth: 0.125
+#     occlusion_probability_left_eye: 0.125
+#     occlusion_probability_right_eye: 0.125
+#     occlusion_probability_face: 0.125
 
-occlusion_settings_test:
-    occlusion_length: [1, 15]
-    occlusion_probability_mouth: 0.125
-    occlusion_probability_left_eye: 0.125
-    occlusion_probability_right_eye: 0.125
-    occlusion_probability_face: 0.125
+# occlusion_settings_test:
+#     occlusion_length: [1, 15]
+#     occlusion_probability_mouth: 0.125
+#     occlusion_probability_left_eye: 0.125
+#     occlusion_probability_right_eye: 0.125
+#     occlusion_probability_face: 0.125
 
 
 drop_last: true
