--- a/gdl_apps/FaceReconstruction/facerec_conf/emica_jaw_emoca_stage.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/emica_jaw_emoca_stage.yaml
@@ -3,7 +3,7 @@ defaults:
   - data/datasets: lrs3_heavier_occlusion
   - data/augmentations: default_no_jpeg
   - model/settings : facerecon_base
-  - model/face_encoder@model/face_encoder : emica_encoder_train
+  - model/face_encoder@model/face_encoder : emica_encoder_jaw_train
   - model/shape_model@model/shape_model: flametex
   - model/renderer@model/renderer: deca_renderer
   - learning/losses: emica_coarse
