--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/deca_mica_encoder.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/deca_mica_encoder.yaml
@@ -6,7 +6,8 @@ encoders:
   deca_encoder:
     type: DecaEncoder
     backbone: ResNet50 
-
+    # backbone: Swin
+    # swin_type: swin_tiny_patch4_window7_224
     input_size: 224
 
     predicts: 
