--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_train_swin.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_train_swin.yaml
@@ -6,7 +6,8 @@ encoders:
 
   expression_encoder: 
     type: ExpressionEncoder
-    backbone: ResNet50
+    backbone: Swin
+    swin_type: swin_tiny_patch4_window7_224
     input_size: 224
     predicts: 
       expcode: 100
@@ -23,8 +24,8 @@ encoders:
 
       deca_encoder:
         type: DecaEncoder
-        backbone: ResNet50 
-
+        backbone: Swin
+        swin_type: swin_tiny_patch4_window7_224
         input_size: 224
       
         predicts: 
@@ -42,7 +43,7 @@ encoders:
           cam: orth 
           lightcode: spherical_harmonics
 
-        trainable: true
+        trainable: false
         last_layer_init_zero: True # ininitializes the last layer of the backbone with zeros
 
       mica_encoder: 
@@ -51,7 +52,7 @@ encoders:
         mica_model_path: 'MICA/model/mica.tar'
         # mica_preprocessing: ported_insightface
         mica_preprocessing: fan
-        
+
         input_size: 224
 
         predicts: 
