--- a/gdl_apps/FaceReconstruction/facerec_conf/emica_jaw_deca_stage_swin.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/emica_jaw_deca_stage_swin.yaml
@@ -6,7 +6,7 @@ defaults:
   - model/face_encoder@model/face_encoder : emica_encoder_jaw_pretrain_swin
   - model/shape_model@model/shape_model: flametex
   - model/renderer@model/renderer: deca_renderer
-  - learning/losses: deca_coarse_pretrain
+  - learning/losses: deca_mica_coarse
   - learning/optimizer: adam
   # - learning/batching@learning/batching: gpu32gb
   - learning/batching@learning/batching: gpu80gb
