--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_jaw_pretrain_swin.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_jaw_pretrain_swin.yaml
@@ -6,14 +6,15 @@ encoders:
 
   expression_encoder: 
     type: ExpressionEncoder
-    backbone: ResNet50
+    backbone: Swin
+    swin_type: swin_tiny_patch4_window7_224
     input_size: 224
     predicts: 
       expcode: 100
-      # jawpose: 3
+      jawpose: 3
     representations: 
       expcode: flame
-      # jawpose: aa
+      jawpose: aa
     trainable: true
     last_layer_init_zero: True # ininitializes the last layer of the backbone with zeros
 
@@ -23,21 +24,22 @@ encoders:
 
       deca_encoder:
         type: DecaEncoder
-        backbone: ResNet50 
+        backbone: Swin
+        swin_type: swin_tiny_patch4_window7_224
 
         input_size: 224
       
         predicts: 
           texcode: 50
-          jawpose: 3
+          # jawpose: 3
           globalpose: 3
           cam: 3 
           lightcode: 27
 
         representations: 
           expcode: flame
+          # jawpose: aa
           texcode: flame
-          jawpose: aa
           globalpose: aa
           cam: orth 
           lightcode: spherical_harmonics
