--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_jaw_train_swin.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_jaw_train_swin.yaml
@@ -49,7 +49,8 @@ encoders:
       mica_encoder: 
         type: MicaEncoder
         backbone: ResNet50 
-        mica_model_path: 'MICA/model/mica.tar'
+        # mica_model_path: 'MICA/model/mica.tar'
+        mica_model_path: 'MICA/model/mica2023.tar'
         # mica_preprocessing: ported_insightface
         mica_preprocessing: fan
 
