--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_train_no_jaw.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_train_no_jaw.yaml
@@ -6,15 +6,13 @@ encoders:
 
   expression_encoder: 
     type: ExpressionEncoder
-    backbone: Swin
-    swin_type: swin_tiny_patch4_window7_224
+    backbone: ResNet50 
     input_size: 224
     predicts: 
       expcode: 100
       # jawpose: 3
     representations: 
       expcode: flame
-      # jawpose: aa
     trainable: true
     last_layer_init_zero: True # ininitializes the last layer of the backbone with zeros
 
@@ -24,13 +22,11 @@ encoders:
 
       deca_encoder:
         type: DecaEncoder
-        backbone: Swin
-        swin_type: swin_tiny_patch4_window7_224
+        backbone: ResNet50 
         input_size: 224
       
         predicts: 
           texcode: 50
-          jawpose: 3
           globalpose: 3
           cam: 3 
           lightcode: 27
@@ -38,7 +34,6 @@ encoders:
         representations: 
           expcode: flame
           texcode: flame
-          jawpose: aa
           globalpose: aa
           cam: orth 
           lightcode: spherical_harmonics
@@ -49,8 +44,7 @@ encoders:
       mica_encoder: 
         type: MicaEncoder
         backbone: ResNet50 
-        mica_model_path: 'MICA/model/mica.tar'
-        # mica_model_path: 'MICA/model/mica2023.tar'
+        mica_model_path: 'MICA/model/mica_2023.tar'
         # mica_preprocessing: ported_insightface
         mica_preprocessing: fan
 
