--- a/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_train_swin_no_jaw.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/model/face_encoder/emica_encoder_train_swin_no_jaw.yaml
@@ -11,10 +11,8 @@ encoders:
     input_size: 224
     predicts: 
       expcode: 100
-      # jawpose: 3
     representations: 
       expcode: flame
-      # jawpose: aa
     trainable: true
     last_layer_init_zero: True # ininitializes the last layer of the backbone with zeros
 
@@ -30,7 +28,6 @@ encoders:
       
         predicts: 
           texcode: 50
-          jawpose: 3
           globalpose: 3
           cam: 3 
           lightcode: 27
@@ -38,7 +35,6 @@ encoders:
         representations: 
           expcode: flame
           texcode: flame
-          jawpose: aa
           globalpose: aa
           cam: orth 
           lightcode: spherical_harmonics
@@ -49,8 +45,7 @@ encoders:
       mica_encoder: 
         type: MicaEncoder
         backbone: ResNet50 
-        mica_model_path: 'MICA/model/mica.tar'
-        # mica_model_path: 'MICA/model/mica2023.tar'
+        mica_model_path: 'MICA/model/mica_2023.tar'
         # mica_preprocessing: ported_insightface
         mica_preprocessing: fan
 
