Update SwinToken configs

--- a/gdl_apps/FaceReconstruction/facerec_conf/emica_deca_stage_swintoken.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/emica_deca_stage_swintoken.yaml
@@ -6,7 +6,7 @@ defaults:
   - model/face_encoder@model/face_encoder : emica_encoder_pretrain_swintoken
   - model/shape_model@model/shape_model: flametex
   - model/renderer@model/renderer: deca_renderer
-  - learning/losses: deca_coarse_pretrain
+  - learning/losses: deca_coarse_train
   - learning/optimizer: adam
   # - learning/batching@learning/batching: gpu32gb
   - learning/batching@learning/batching: gpu80gb
