--- a/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/emica_coarse.yaml
+++ b/gdl_apps/FaceReconstruction/facerec_conf/learning/losses/emica_coarse.yaml
@@ -48,15 +48,24 @@ losses:
     masking_type: gt 
 
   emotion_loss:
+    # weight: 1000.0 
+    # weight: 500.0 
+    # weight: 100.0 
+    # weight: 50.0 
+    # weight: 20.0 
     # weight: 10.0 
-    weight: 1.0
+    # weight: 5.0
+    weight: 2.5
+    # weight: 1.0
     # weight: 0.1
+    # weight: 0.0
     # weight: 0.01
     # weight: 0.001
     # weight: 0.0001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
-    # emo_feat_loss: mse_loss
-    emo_feat_loss: masked_mse_loss
+    emo_feat_loss: mse_loss
+    # emo_feat_loss: masked_mse_loss
+    # emo_feat_loss: cosine_similarity
     trainable: false 
     normalize_features: false 
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
@@ -69,7 +78,9 @@ losses:
   lip_reading_loss: 
     type: lip_reading_loss
     # metric: l1
-    # metric: cosine_similarity
+    metric: cosine_similarity
+    # metric: mse_loss
+    # weight: 0.0
     # weight: 1.5
     # weight: 3.0
     # weight: 6.0
@@ -79,7 +90,9 @@ losses:
     # weight: 20.0
     # weight: 30.0
     # weight: 50.0
-    metric: mse_loss
+    # weight: 100.0
+    # weight: 500.0
+    # weight: 1000.0
 
     mask_invalid: mediapipe_landmarks
     predicted_key: predicted_image
